# JubPulse-ai-scanner

./: .gitignore  CLAUDE.md  README.md  example.env  main.py  mcp_supabase.py  mcp_toy.py  pyproject.toml
.claude/commands/: analyze-run.md
.github/workflows/: run_scanner.yml
Helpers/: connection_test.py  mcp_supabase.py
config/: portfolio.txt
data/: checker_decisions.txt  eval_results.csv  eval_sample.json  jobs.csv  last_seen.csv  raw_dump.json  scored_dump.json
engine/: brain.py  checker.py  database.py  listener.py  models.py  notify.py
local/: finalize.py  run_local.py  run_pipeline.sh
scripts/: eval_fetch.py  eval_pipeline_step1.py  model_analysis.py  model_test.py
